// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unary-expression boolean_literal ast: ast 1`] = `
Object {
  "argument": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": Object {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "trailingComments": Array [],
    "type": "BooleanLiteral",
    "value": "true",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 5,
      "line": 1,
      "offset": 4,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "operator": "!",
  "trailingComments": Array [],
  "type": "UnaryExpression",
}
`;

exports[`unary-expression boolean_literal format: format 1`] = `!true`;

exports[`unary-expression boolean_literal token 1`] = `
Array [
  !,
  true,
]
`;

exports[`unary-expression variable ast: ast 1`] = `
Object {
  "argument": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": Object {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "name": "condition",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "operator": "!",
  "trailingComments": Array [],
  "type": "UnaryExpression",
}
`;

exports[`unary-expression variable format: format 1`] = `!condition`;

exports[`unary-expression variable token 1`] = `
Array [
  !,
  condition,
]
`;
